# RamyBot

./: form.html  form_ar.html  main.py  pyproject.toml  requirements.txt
handlers/: user.py
static/: form_en.html  style.css
templates/: form_ar.html  form_en.html
