[tool.poetry]
name = "ramybot"
version = "0.1.0"
description = "RamyBot Telegram Bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
aiohttp = "^3.8.6"
aiogram = "^2.25.1"
pydantic = "^1.10.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
